Limpieza de estilos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,7 +37,7 @@
 <!-- Header Ends Here -->
 
 <!-- Featured Area -->
-<div id="featured-wrapper">
+<!-- <div id="featured-wrapper">
 
   <div class="container">
     <div class="row double">
@@ -73,14 +73,14 @@
     </div>
   </div>
 
-</div>
+</div> -->
 
 
 <!-- Featured Ends Here -->
 
 <!-- Page -->
 
-<div id="page">
+<!-- <div id="page">
   <div class="container">
     <div class="row">
 
@@ -89,7 +89,7 @@
           <header>
             <h2>Praesent mattis condimentum</h2>
           </header>
-          <a href="#" class="image-style1"><img src="/assets/images/pic01.jpg" alt=""></a>
+          <a href="#" class="image-style1"><img src="assets/images/pic01.jpg" alt=""></a>
           <p>This is <strong>MegaCorp</strong>, a responsive HTML5 site template freebie by <a
               href="http://templated.co">TEMPLATED</a>. Released for free under the <a
               href="http://templated.co/license">Creative Commons Attribution</a> license, so use it for whatever
@@ -195,7 +195,7 @@
 
     </div>
   </div>
-</div>
+</div> -->
 
 <!-- /Page -->
 
