cambio de titulo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,7 @@
       <div class="row">
         <section class="12u">
           <header>
-            <h2>In posuere eleifend odio quisque semper</h2>
+            <h2>Alvaro Feeder</h2>
             <span class="byline">Pellentesque viverra vulputate enim. Aliquam erat volutpat. Pellentesque tristique ante
               ut risus. Quisque dictum. Integer nisl risus, sagittis rutrum id, elementum congue. Suspendisse dictum
               porta lectus.</span>
