--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,7 +3,7 @@
 
 #header-wrapper
 {
-    background: url(~/assets/images/banner.jpg) no-repeat center top;
+    background: url(~/assets/images/cabecera.jpg) no-repeat center;
     background-size: cover;
     position: relative;
 }
