Estructura basica de creacion de usuarios·

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,6 +28,8 @@
               porta lectus.</span>
           </header>
           <a routerLink="/create-competition" class="button button-alt">Create Competition</a>
+          <a routerLink="/sign-in" class="button button-alt">Create User</a>
+
         </section>
       </div>
     </div>
