Crear login component, cambiar apariencia general de la aplicacion

--- a/src/app/competition/create.competition/create.competition.component.scss
+++ b/src/app/competition/create.competition/create.competition.component.scss
@@ -2,15 +2,15 @@
   display: flex;
   justify-content: center;
   padding: 10em 0;
-  margin: 4em 0;
+  margin: 1em 0;
 
-  background: url(~/assets/images/fondo.jpg) no-repeat center;
+  background-color: #8A897C;
   background-size: cover;
   position: relative;
   min-height: 400px;
 
   form {
-    background-color: #212124f5;
+    background-color: #BDBBB0;
     padding: 2em;
 
     display: flex;
