--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,12 +5,7 @@ body
 	line-height: 2em;
 	font-family: 'Open Sans', sans-serif;
 	font-size: 10pt;
-	color: #686868;
-}
-
-body, #skel-panels-pageWrapper
-{
-	background: #101214 url(~/assets/images/main-bg.png) repeat;
+	color: #ffffff;
 }
 
 h1, h2, h3 {
