--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,12 +6,12 @@
     <div id="logo">
       <h1><a href="#">MegaCorp</a></h1>
     </div>
+
     <nav id="nav">
       <ul>
-        <li class="current_page_item"><a href="index.html">Homepage</a></li>
-        <li><a href="twocolumn1.html">Right Sidebar</a></li>
-        <li><a href="twocolumn2.html">Left Sidebar</a></li>
-        <li><a href="onecolumn.html">No Sidebar</a></li>
+        <li class="current_page_item"><a routerLink="home" >Homepage</a></li>
+        <li><a routerLink="/create-competition" class="button button-alt">Crear Competicion</a></li>
+        <li><a routerLink="/sign-in"  class="button button-alt">Crear Usuario</a></li>
       </ul>
     </nav>
 
@@ -22,14 +22,9 @@
       <div class="row">
         <section class="12u">
           <header>
-            <h2>Alvaro Feeder</h2>
-            <span class="byline">Pellentesque viverra vulputate enim. Aliquam erat volutpat. Pellentesque tristique ante
-              ut risus. Quisque dictum. Integer nisl risus, sagittis rutrum id, elementum congue. Suspendisse dictum
-              porta lectus.</span>
+            <h2>Game Universe</h2>
+            <span class="byline">Adentrate en el universo de los videojuegos</span>
           </header>
-          <a routerLink="/create-competition" class="button button-alt">Create Competition</a>
-          <a routerLink="/sign-in" class="button button-alt">Create User</a>
-
         </section>
       </div>
     </div>
