--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -21,7 +21,7 @@
 
 #header {
     position: relative;
-    z-index: 1;
+    z-index: 10;
 }
 
 header
@@ -142,6 +142,7 @@ header .byline
     padding: 3em 0em 6em 0em;
     border-top: 1px solid #212124;
     text-align: center;
+    background-color: #474849;
 }
 
 #copyright p
