Creacion de navbar en un componente, añadir permisos navbar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,13 +7,7 @@
       <h1><a href="#">MegaCorp</a></h1>
     </div>
 
-    <nav id="nav">
-      <ul>
-        <li class="current_page_item"><a routerLink="home" >Homepage</a></li>
-        <li><a routerLink="/create-competition" class="button button-alt">Crear Competicion</a></li>
-        <li><a routerLink="/sign-in"  class="button button-alt">Crear Usuario</a></li>
-      </ul>
-    </nav>
+    <app-navbar></app-navbar>
 
   </div>
 
