Estilos comunes formularios

--- a/src/app/competition/create.competition/create.competition.component.html
+++ b/src/app/competition/create.competition/create.competition.component.html
@@ -1,5 +1,7 @@
 <form [formGroup]="competitionForm" (ngSubmit)="onSubmit()" novalidate>
 
+  <p class="h4 mb-4">New Competition</p>
+
   <div>
     <label>Competition Name</label>
     <input class="dark-selector" formControlName="name" type="text">
