--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -1,22 +1,25 @@
-<form [formGroup]="userForm" (ngSubmit)="onSubmit(userForm)" class="text-center border border-light p-5">
+<form [formGroup]="userForm" (ngSubmit)="onSubmit(userForm)" novalidate>
 
   <p class="h4 mb-4">Sign up</p>
 
-  <div class="form-row mb-4">
-      <div class="col">
-          <input type="text" formControlName="login"  class="form-control" placeholder="Login">
-      </div>
-      <div class="col">
-          <input type="text" formControlName="name"  class="form-control" placeholder="Name">
-      </div>
-      <div class="col">
-        <input type="text" formControlName="password"  class="form-control" placeholder="Password">
-    </div>
+
+  <div>
+    <label>Login</label>
+    <input class="dark-selector" type="text" formControlName="login">
+  </div>
+  <div>
+    <label>Username</label>
+    <input class="dark-selector" type="text" formControlName="name">
+  </div>
+  <div>
+    <label>Password</label>
+    <input class="dark-selector" type="text" formControlName="password">
   </div>
 
 
-  <button class="btn btn-info my-4 btn-block" type="submit">Sign in</button>
 
-  <hr>
+  <div class="button-container">
+    <button class="btn btn-info my-4 btn-block" type="submit">Sign in</button>
+  </div>
 
-</form>  
+</form>
