--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -3,17 +3,17 @@
   <p class="h4 mb-4">Sign up</p>
 
 
-  <div>
+  <div class="field">
     <label>Login</label>
     <input class="dark-selector" type="text" formControlName="login">
   </div>
-  <div>
+  <div class="field">
     <label>Username</label>
     <input class="dark-selector" type="text" formControlName="name">
   </div>
-  <div>
+  <div class="field">
     <label>Password</label>
-    <input class="dark-selector" type="text" formControlName="password">
+    <input class="dark-selector" type="password" formControlName="password">
   </div>
 
 
