--- a/src/app/sign-in/sign-in.component.scss
+++ b/src/app/sign-in/sign-in.component.scss
@@ -3,8 +3,8 @@
     justify-content: center;
     padding: 10em 0;
   
-    background-color: #8A897C;
-    background-size: cover;
+
+    background: url('/assets/images/cabecera.jpg') no-repeat center;
     position: relative;
     min-height: 400px;
 
