--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,25 @@
+/* poppins-regular - latin */
+@font-face {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  src: url('./assets/poppins/poppins-v6-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local('Poppins Regular'), local('Poppins-Regular'),
+       url('./assets/poppins/poppins-v6-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('./assets/poppins/poppins-v6-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('./assets/poppins/poppins-v6-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('./assets/poppins/poppins-v6-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('./assets/poppins//poppins-v6-latin-regular.svg#Poppins') format('svg'); /* Legacy iOS */
+}
+
+
+
 body
 {
 	margin: 0;
 	padding: 0em;
 	line-height: 2em;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Poppins','Open Sans', sans-serif;
 	font-size: 10pt;
 	color: #ffffff;
 }
@@ -24,10 +40,6 @@ h2
 p, ol, ul
 {
 	margin-top: 1em;
-}
-
-p
-{
 }
 
 a
@@ -60,23 +72,61 @@ form {
     text-align: center;
   }
 
-  label {
-    display: block;
-    color: #000;
-    font-size: 12pt;
-  }
+  .field{
 
+    margin-bottom: 1em;
+
+    label {
+      display: block;
+      color: #000;
+      font-size: 12pt;
+    }
+
+    .dark-selector {
+      color: #cccccc;
+      border: 1px #000000 solid;
+      background: #333301;
+      box-shadow: 0 1px 2px #000 inset;
+      width: 100%;
+    }
+  }
   .button-container{
     display: flex;
     justify-content: center;
     margin-top: auto;
   }
+}
 
-  .dark-selector {
-    color: #cccccc;
-    border: 1px #000000 solid;
-    background: #333301;
-    box-shadow: 0 1px 2px #000 inset;
-    width: 100%;
+button.game-button {
+  font-family: 'Poppins','Open Sans', sans-serif;
+  padding: 0.5em 1em;
+  background-color: #477a93;
+  color: #FFF;
+  border-radius: 28px;
+  border: none;
+  text-decoration: none;
+  cursor: pointer;
+
+  &:hover,&.hover{
+    background-color: rgb(71, 102, 148);
   }
+  &:active,&.active{
+    // position: relative;
+    // top: 1px;
+    background-color: #6b87d5;
+    background-size: 100%;
+    transition: background 0s;
+  }
+  &.disabled{
+    background-color: hsla(200, 35%, 43%, 0.38);
+  }
+}
+
+button.game-icon{
+  background-color: #091318;
+  color: #FFF;
+  border-radius: 50px;
+  border: none;
+  text-decoration: none;
+  cursor: pointer;
 }
