Añadir botones de iconos

--- a/src/app/visual/visual.component.html
+++ b/src/app/visual/visual.component.html
@@ -1,23 +1,42 @@
 <div class="visual-container">
-  <div class="button-container">
-    <label>Normal</label>
-    <button class="game-button">Sign Up</button>
+  <div class="visual-column">
+    <div class="button-container">
+      <label>Normal</label>
+      <button class="game-button dark">Sign Up</button>
+    </div>
+    <div class="button-container">
+      <label>Hover</label>
+      <button class="game-button dark hover">Sign Up</button>
+    </div>
+    <div class="button-container">
+      <label>Active</label>
+      <button class="game-button dark active">Sign Up</button>
+    </div>
+    <div class="button-container">
+      <label>Disabled</label>
+      <button class="game-button dark disabled">Sign Up</button>
+    </div>
   </div>
-  <div class="button-container">
-    <label>Hover</label>
-    <button class="game-button hover">Sign Up</button>
+  <div class="visual-column">
+    <div class="button-container-row">
+      <button class="game-button game-icon light">
+        <img class="icon" src="\assets\icons\plus.svg" />
+      </button>
+    </div>
+    <div class="button-container-row">
+      <button class="game-button game-icon light">
+        <img class="icon" src="\assets\icons\trash-can.svg" />
+      </button>
+    </div> 
+    <div class="button-container-row">
+      <button class="game-button game-icon light">
+        <img class="icon" src="\assets\icons\email.svg" />
+      </button>
+    </div>
+    <div class="button-container-row">
+      <button class="game-button game-icon light">
+        <img class="icon" src="\assets\icons\settings.svg" />
+      </button>
+    </div>
   </div>
-  <div class="button-container">
-    <label>Active</label>
-    <button class="game-button active">Sign Up</button>
-  </div>
-  <div class="button-container">
-    <label>Disabled</label>
-    <button class="game-button disabled">Sign Up</button>
-  </div>
-</div>
-<div class="visual-container">
-<button class="game-icon">
-    <img class="icon" src="\assets\icons\plus.svg" />
-  </button>
 </div>
