Subir version de Angular, re estructurar carpeteria

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,30 +1,4 @@
-<!-- Header -->
-<div id="header-wrapper">
-
-  <div id="header" class="container">
-
-    <div id="logo">
-      <h1><a href="#">MegaCorp</a></h1>
-    </div>
-
-    <app-navbar></app-navbar>
-
-  </div>
-
-  <div id="banner">
-    <div class="container">
-      <div class="row">
-        <section class="12u">
-          <header>
-            <h2>Game Universe</h2>
-            <span class="byline">Adentrate en el universo de los videojuegos</span>
-          </header>
-        </section>
-      </div>
-    </div>
-  </div>
-
-</div>
+<game-header></game-header>
 
 <router-outlet></router-outlet>
 
