--- a/src/app/visual/visual.component.html
+++ b/src/app/visual/visual.component.html
@@ -18,25 +18,59 @@
     </div>
   </div>
   <div class="visual-column">
-    <div class="button-container-row">
-      <button class="game-button game-icon light">
-        <img class="icon" src="\assets\icons\plus.svg" />
-      </button>
+
+    <div>
+      <div class="button-container-row">
+        <button class="game-button game-icon light">
+          <img class="icon" src="\assets\icons\plus.svg" />
+        </button>
+      </div>
+      <div class="button-container-row">
+        <button class="game-button game-icon light">
+          <img class="icon" src="\assets\icons\trash-can.svg" />
+        </button>
+      </div>
+      <div class="button-container-row">
+        <button class="game-button game-icon light">
+          <img class="icon" src="\assets\icons\email.svg" />
+        </button>
+      </div>
+      <div class="button-container-row">
+        <button class="game-button game-icon light">
+          <img class="icon" src="\assets\icons\settings.svg" />
+        </button>
+      </div>
     </div>
-    <div class="button-container-row">
-      <button class="game-button game-icon light">
-        <img class="icon" src="\assets\icons\trash-can.svg" />
-      </button>
-    </div> 
-    <div class="button-container-row">
-      <button class="game-button game-icon light">
-        <img class="icon" src="\assets\icons\email.svg" />
-      </button>
+
+
+    <div>
+      <div class="button-container-row">
+        <button class="game-button game-icon navigation dark">
+          <img class="icon" src="\assets\icons\right-arrow.svg" />
+        </button>
+      </div>
+
+      <div class="button-container-row">
+        <button class="game-button sucess">Confirm</button>
+      </div>
+
+      <div class="button-container-row">
+        <button class="game-button cancel">Cancel</button>
+      </div>
     </div>
-    <div class="button-container-row">
-      <button class="game-button game-icon light">
-        <img class="icon" src="\assets\icons\settings.svg" />
-      </button>
+
+    <div>
+      <nav id="nav">
+        <ul>
+          <li class="current_page_item"><a routerLink="/home">Home</a></li>
+          <li><a routerLink="/create-competition" class="button button-alt">Option A</a></li>
+          <li><a routerLink="/sign-in" class="button button-alt">Option B </a></li>
+          <li><a routerLink="/login" class="button button-alt">Options C</a></li>
+        </ul>
+      </nav>
     </div>
   </div>
+
+
+
 </div>
