--- a/src/app/visual/visual.component.scss
+++ b/src/app/visual/visual.component.scss
@@ -17,3 +17,44 @@
   }
 }
 
+
+/* Menu */
+
+nav {
+  top: 1.1em;
+  right: 0;
+}
+
+nav ul {
+  text-align: center;
+}
+
+nav li {
+  display: inline-block;
+}
+
+nav a {
+  display: block;
+  padding: 1em 1.5em;
+  border-radius: 4px;
+  letter-spacing: 1px;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 1.10em;
+  color: black;
+  border: #477a93 solid 1px;
+}
+
+nav .current_page_item {
+}
+
+nav .current_page_item a {
+  background: #2B8FC4;
+  box-shadow: inset 0px -15px 10px 0px rgba(0,0,0,0.10);
+  text-shadow: none;
+  color: #FFFFFF;
+  border: none;
+}
+
+nav a:hover {
+}
