--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,24 +1,14 @@
 <!-- Header -->
-<div id="header-wrapper">
+<div class="header-wrapper">
 
-  <div id="header" class="container">
-
-    <div id="logo">
-      <h1><a href="#">Game Universe</a></h1>
-    </div>
-    <app-navbar></app-navbar>
+  <div class="logo">
+      <h1><a href=" #">Game Universe</a></h1>
   </div>
 
-  <div id="banner">
-    <div class="container">
-      <div class="row">
-        <section class="12u">
-          <header>
-            <span class="byline">Adentrate en el universo de los videojuegos</span>
-          </header>
-        </section>
-      </div>
-    </div>
+  <div class="banner">
+    <span class="byline">Adentrate en el universo de los videojuegos</span>
   </div>
+
+  <app-navbar></app-navbar>
 
 </div>
