--- a/src/app/core/navbar/navbar.component.scss
+++ b/src/app/core/navbar/navbar.component.scss
@@ -1,41 +1,40 @@
 /* Menu */
 
 nav {
-    position: absolute;
     top: 1.1em;
     right: 0;
-}
-
-nav ul {
+  }
+  
+  nav ul {
     text-align: center;
-}
-
-nav li {
+  }
+  
+  nav li {
     display: inline-block;
-}
-
-nav a {
+  }
+  
+  nav a {
     display: block;
-    float: left;
     padding: 1em 1.5em;
     border-radius: 4px;
     letter-spacing: 1px;
     text-decoration: none;
     text-transform: uppercase;
     font-size: 1.10em;
-    color: #FFF;
-    outline: 0;
-}
-
-nav .current_page_item {
-}
-
-nav .current_page_item a {
+    color: black;
+    border: #477a93 solid 1px;
+  }
+  
+  nav .current_page_item {
+  }
+  
+  nav .current_page_item a {
     background: #2B8FC4;
     box-shadow: inset 0px -15px 10px 0px rgba(0,0,0,0.10);
     text-shadow: none;
     color: #FFFFFF;
-}
-
-nav a:hover {
-}
+    border: none;
+  }
+  
+  nav a:hover {
+  }
