--- a/src/app/competition/homepage/homepage.component.scss
+++ b/src/app/competition/homepage/homepage.component.scss
@@ -3,8 +3,8 @@
     justify-content: center;
     padding: 10em 0;
   
-    background-color: #8A897C;
-    background-size: cover;
+    // background-color: #8A897C;
+    // background-size: cover;
     position: relative;
     min-height: 400px;
 }
