--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,6 +13,16 @@
 }
 
 
+/* Colores */
+:root {
+  --primary-color-1: #b7e5f2;
+  --primary-color-2: #3c78b6;
+  --primary-color-3: #84f0fd;
+  --primary-color-4: #011b40;
+  --primary-color-5: #01091e;
+
+}
+
 
 body
 {
