--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,9 @@
 
 
 <!-- Copyright -->
-<div id="copyright" class="container">
-  Design: <a href="http://templated.co">TEMPLATED</a> Images: <a href="http://unsplash.com">Unsplash</a> (<a
-    href="http://unsplash.com/cc0">CC0</a>)
-</div>
+<diV class="container-copyright">
+  <div id="copyright" class="container">
+    Design: <a href="http://templated.co">TEMPLATED</a> Images: <a href="http://unsplash.com">Unsplash</a> (<a
+      href="http://unsplash.com/cc0">CC0</a>)
+  </div>
+</diV>
