--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,104 +1,9 @@
 
-header h2
-{
-    display: block;
-    margin: 0;
-    padding: 0;
+:host{
+    display: flex;
+    flex-direction: column;
 }
 
-header .byline
-{
-    display: block;
-    margin: 1.50em 0em;
-    line-height: 2em;
-    font-weight: 200;
-    color: rgba(255,255,255,.8);
-}
-
-/* Banner */
-
-#banner
-{
-    overflow: hidden;
-    text-align: center;
-    z-index: 1;
-    position: relative;
-}
-
-#banner header h2
-{
-    text-transform: uppercase;
-    font-size: 3em;
-    color: #FFF;
-}
-
-#banner header .byline
-{
-    padding: 0em 5em;
-    font-size: 1.50em;
-}
-
-#banner .button
-{
-    margin-top: 1em;
-}
-
-/* Wrapper */
-
-#wrapper
-{
-    padding: 5em 0em 3em 0em;
-}
-
-#page
-{	
-    padding: 5em 0em 3em 0em;
-}
-
-/* Content */
-
-#content
-{
-}
-
-#content a img
-{
-    display: block;
-    width: 100%;
-    margin-bottom: 1.50em;
-    border-radius: 5px;
-}
-
-#content .main-title
-{
-    font-size: 3.00em;
-}
-
-#content .button
-{
-    margin-top: 2em;
-}
-
-/* Sidebar */
-
-#sidebar
-{
-}
-
-#sidebar h2
-{
-    margin-bottom: 1em;
-}
-
-#sidebar #box1
-{
-    margin-bottom: 3em;
-}
-
-#sidebar #box2 .button
-{
-    margin-top: 0;
-}
 
 
 
@@ -110,7 +15,7 @@ header .byline
     padding: 3em 0em 6em 0em;
     border-top: 1px solid #212124;
     text-align: center;
-    background-color: #474849;
+    background-color: var(--primary-color-5);
 }
 
 #copyright p
