--- a/src/app/core/header/navbar/navbar.component.scss
+++ b/src/app/core/header/navbar/navbar.component.scss
@@ -1,8 +1,14 @@
 /* Menu */
 
+:host{
+  // flex-grow: 1;
+}
+
+
 nav {
     top: 1.1em;
     right: 0;
+    float: right;
   }
   
   nav ul {
@@ -11,25 +17,34 @@ nav {
   
   nav li {
     display: inline-block;
+    margin: 0px 0.5px;
   }
   
   nav a {
     display: block;
     padding: 1em 1.5em;
-    border-radius: 4px;
+    // border-radius: 4px;
     letter-spacing: 1px;
     text-decoration: none;
     text-transform: uppercase;
     font-size: 1.10em;
-    color: black;
-    border: #477a93 solid 1px;
+    color: var(--primary-color-2);
+    border: var(--primary-color-2) solid 1px;
+
+    cursor: pointer;
+    
+    &:hover{
+      background:var(--primary-color-1) ;
+      color: white;
+    }
+
   }
   
   nav .current_page_item {
   }
   
   nav .current_page_item a {
-    background: #2B8FC4;
+    background:var(--primary-color-2) ;
     box-shadow: inset 0px -15px 10px 0px rgba(0,0,0,0.10);
     text-shadow: none;
     color: #FFFFFF;
