--- a/src/app/sign-in/sign-in.component.scss
+++ b/src/app/sign-in/sign-in.component.scss
@@ -4,21 +4,75 @@
     padding: 10em 0;
   
 
-    background: url('/assets/images/cabecera.jpg') no-repeat center;
+    background: url('/assets/images/universe.jpg') no-repeat center;
     position: relative;
     min-height: 400px;
+    border-top: 1px solid #212124;
 
 
     form {
-        background-color: #BDBBB0;
-        padding: 2em;
+      background-color: var(--primary-color-4);
+      padding: 2em;
+      font-family: 'Poppins','Open Sans', sans-serif;
     
-        display: flex;
-        flex-direction: column;
+      display: flex;
+      flex-direction: column;
+      color: #ffffff;
+    
+      p {
+        line-height: 1em;
+       
+        margin-top: 0;
+        font-size: 20pt;
+        font-weight: bold;
+        text-align: center;
+      }
+    
+      .field{
+    
+        margin-bottom: 1em;
     
         label {
           display: block;
+          font-size: 12pt;
         }
+    
+        .dark-selector {
+          color: #000000;
+          border: 1px #000000 solid;
+          background: var(--primary-color-1);
+          box-shadow: 0 1px 2px #000 inset;
+          width: 100%;
+        }
+      }
+      .button-container{
+        display: flex;
+        justify-content: center;
+        margin-top: auto;
+
+        button{
+          padding: 0.5em 1em;
+          text-decoration: none;
+          outline: none;
+  
+          color: #FFF;
+          // border-radius: 28px;
+          border: none;
+          text-decoration: none;
+          cursor: pointer;
+          
+          background-color: var(--primary-color-2);
+          &:hover{
+            background-color: var(--primary-color-1);
+          }
+          &:active{
+        
+            background-color:var(--primary-color-3);
+            background-size: 100%;
+            transition: background 0s;
+          }
+        }
+      }
     }
     
 }
